# epaper_classes

./: .gitignore  README.md  c_convert.php  c_convert_pico2.php  convert2class.php  convert2class_pico2.php  image2bas.php  pickupPrototypes.php
build_pico1/: README.md
build_pico2/: README.md
c/: CMakeLists.txt  machikania.c  machikania.h  machikania_spi.c  main.c
c/e-Paper/: DEV_Config.c  DEV_Config.h  EPD_2in9_V2.c  ImageData.c
classes/: E2_13V2.bas  E2_13V3.bas  E2_13V4.bas  E2_13bV3.bas  E2_13bV4.bas  E2_13bc.bas  E2_13d.bas  E2_66.bas  E2_66b.bas  E2_7.bas  E2_7V2.bas  E2_9V2.bas  E2_9bV3.bas  E2_9bc.bas  E2_9d.bas  E3_7.bas  E4_2.bas  E4_2V2.bas  E4_2bV2.bas  E5_65f.bas  E5_83V2.bas  E5_83bV2.bas  E7_5V2.bas  E7_5bV2.bas
classes/pico1/: E2_13V2.bas  E2_13V3.bas  E2_13V4.bas  E2_13bV3.bas  E2_13bV4.bas  E2_13bc.bas  E2_13d.bas  E2_66.bas  E2_66b.bas  E2_7.bas  E2_7V2.bas  E2_9V2.bas  E2_9bV3.bas  E2_9bc.bas  E2_9d.bas  E3_7.bas  E4_2.bas  E4_2V2.bas  E4_2bV2.bas  E5_65f.bas  E5_83V2.bas  E5_83bV2.bas  E7_5V2.bas  E7_5bV2.bas
classes/pico2/: E2_13V2.bas  E2_13V3.bas  E2_13V4.bas  E2_13bV3.bas  E2_13bV4.bas  E2_13bc.bas  E2_13d.bas  E2_66.bas  E2_66b.bas  E2_7.bas  E2_7V2.bas  E2_9V2.bas  E2_9bV3.bas  E2_9bc.bas  E2_9d.bas  E3_7.bas  E4_2.bas  E4_2V2.bas  E4_2bV2.bas  E5_65f.bas  E5_83V2.bas  E5_83bV2.bas  E7_5V2.bas  E7_5bV2.bas
images/: flag.bas  i2in13.bas  i2in13b.bas  i2in13b4.bas  i2in13c.bas  i2in13d.bas  i2in66.bas  i2in66b.bas  i2in7.bas  i2in7b.bas  i2in7b2.bas  i2in9.bas  i2in9bc.bas  i4in2.bas  i4in2bc.bas  i5in65f.bas  i5in83V2.bas  i5in83b2.bas  i7in5V2.bas
